--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,20 @@ html{
 }
 
 .menu{
-    text-align: justify;
-    margin-right: 50%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-right: 25%;
+    margin-left: 25%;
+    align-items: center;
 }
 
 *{
     margin: 0;
+}
+
+body{
+    align-items: center;
 }
 
 /* fim do html */
@@ -77,18 +85,18 @@ footer {
 	margin-top: 50px;
 }
 
-ul {
+footer ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
 }
 
-li {
+footer li {
 	display: inline-block;
 	margin: 0 10px;
 }
 
-a {
+footer a {
 	color: #fff;
 	text-decoration: none;
 }
