--- a/css/ajuda.css
+++ b/css/ajuda.css
@@ -1,6 +1,6 @@
-*{
+/* *{
     margin: 0;
-}
+} */
 
 html{
     background-color: rgb(65, 65, 65);
@@ -10,7 +10,7 @@ html{
 /* fim do html */
 
 header{
-    background-color: #130c18;
+    background-color: #000000;
     color: #fff;
     padding: 50px;
     text-align: center;
@@ -94,4 +94,48 @@ footer li {
 footer a {
 	color: #fff;
 	text-decoration: none;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em;
+}
+
+.help-section {
+    background-color: #190122;
+    padding: 2em;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.help-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.help-list li {
+    margin-bottom: 20px;
+}
+
+
+
+.perguntas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+    background-color: #190122;
+    border-radius: 10px;
+    border: 1px solid white;
+
 }
