--- a/css/planos.css
+++ b/css/planos.css
@@ -3,13 +3,13 @@
 }
 
 html{
-    background-color: rgb(65, 65, 65);
-    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 /* fim do html  */
 
 header{
-    background-color: #130c18;
+    background-color: #000000;
     color: #fff;
     padding: 50px;
     text-align: center;
@@ -91,4 +91,9 @@ footer  li {
 footer a {
 	color: #fff;
 	text-decoration: none;
+}
+
+.hum{
+    display: flex;
+    
 }
