--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html{
-    background-color: rgb(65, 65, 65);
-    color: rgb(255, 255, 255);
+    background-color: rgb(226, 226, 226);
+    color: rgb(0, 0, 0);
 }
 
 #banner{
@@ -27,7 +27,7 @@ body{
 /* fim do html */
 
 header{
-    background-color: #130c18;
+    background-color: #000000;
     color: #fff;
     padding: 50px;
     text-align: center;
@@ -116,7 +116,7 @@ footer a {
 .info{
     font-size: 18px;
     margin-top: 20px;
-    border: 1px solid #fff;
+    border: 1px solid #000000;
     border-radius: 6px;
     padding: 6px;
 }
