--- a/css/registro.css
+++ b/css/registro.css
@@ -1,13 +1,6 @@
-/* *{
-    margin: 0;
-} */
-
-html{
-        background-color: rgb(256, 256, 256);
-    color: rgb(0, 0, 0);
+*{margin: 0;
+    
 }
-
-/* fim do html */
 
 header{
     background-color: #000000;
@@ -59,19 +52,6 @@ header a {
 }
 
 
-
-.logo{
-    margin-right: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100px;
-
-}
-
-/* fim do header */
-
 footer {
 	background-color: #333;
 	color: #fff;
@@ -94,48 +74,4 @@ footer li {
 footer a {
 	color: #fff;
 	text-decoration: none;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2em;
-}
-
-.help-section {
-    background-color: #ffffff;
-    padding: 2em;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.help-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.help-list li {
-    margin-bottom: 20px;
-}
-
-
-
-.perguntas{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1em;
-    background-color: #ffffff;
-    border-radius: 10px;
-    border: 1px solid rgb(0, 0, 0);
-
 }
